force-app/main/default/objects/Jatis_Users__c/Jatis_Users__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Jatis Users</label>
</CustomObject>