force-app/main/default/objects/Jatis_Users__c/fields/Jatis_Access_Key__c.field-meta.xml
<CustomField>
    <fullName>Jatis_Access_Key__c</fullName>
    <label>Jatis Access Key</label>
    <length>200</length>
    <type>Text</type>
</CustomField>