force-app/main/default/objects/Jatis_Users__c/fields/Jatis_Username__c.field-meta.xml
<CustomField>
    <fullName>Jatis_Username__c</fullName>
    <label>Jatis Username</label>
    <length>200</length>
    <type>Text</type>
</CustomField>